Add global style files to nuxt config

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -2,3 +2,11 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+// Vuetify
+$body-font-family: 'Montserrat', sans-serif;
+$heading-font-family: 'Oswald';
+$font-size-root: 16px;
+
+// Global
+$global-border-radius: 4px;
